--- a/index.html
+++ b/index.html
@@ -3501,7 +3501,7 @@
               <ion-icon name="call-outline"></ion-icon>
             </div>
 
-            <a href="tel:+91 9907892717" class="footer-nav-link">+91 9907892717</a>
+            <a href="tel:+91 9907******" class="footer-nav-link">+91 99078******</a>
           </li>
 
           <li class="footer-nav-item flex">
@@ -3589,5 +3589,6 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
+
 
 </html>
